syntax = "proto3";

package rpcComment;

option go_package = "github.com/RaymondCode/simple-demo/pb/rpcComment;rpcComment";

import "rpcUser/rpcUser.proto";

message Comment {
  int64 id = 1;
  rpcUser.User user = 2;
  string content = 3;
  string create_date = 4;
}

message CommentRequest {
  string token = 1;
  string video_id = 2;
  string action_type = 3;
  string comment_text = 4;
  string comment_id = 5;
  int64 user_id = 6;
}

message CommentResponse {
  int32 status_code = 1;
  string status_msg = 2;
  Comment comment = 3;
}

message CommentListReq {
  string token = 1;
  string video_id = 2;
  int64 user_id = 3;
}

message CommentListResp {
  int32 status_code = 1;
  string status_msg = 2;
  repeated Comment comment_list = 3;
}

service RPCCommentService {
  rpc Comment(CommentRequest) returns (CommentResponse) {}
  rpc GetCommentList(CommentListReq) returns (CommentListResp) {}
}